@@ -551,6 +551,13 @@ static int lu_release(const char *path, int flags)
     return 0;
 }
 
+static int lu_default_statfs(struct statfs *buf)
+{
+    buf->f_namelen = 255;
+    buf->f_bsize = 512;
+    return 0;
+}
+
 #if FUSE_MAJOR_VERSION < 2
 static int lu_statfs(struct fuse_statfs *stbuf)
 #else
@@ -560,7 +567,7 @@ static int lu_statfs(const char *path, struct statfs *stbuf)
     struct lufs_sbattr_ sbattr;
 
     if(!lu_fops.statfs)
-        return -ENOSYS;
+        return lu_default_statfs(stbuf);
 
     memset(&sbattr, 0, sizeof(sbattr));
     if(lu_fops.statfs(lu_context, &sbattr) < 0)
